# scrcpy-connect

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
scrcpy_connect/: cli.py  core.py  logger.py  utils.py
tests/: test_utils.py
